--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <svg width="101" height="100" viewBox="0 0 101 100" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path class="button__path"
           d="M99.0521 50C99.0521 77.0615 77.1029 99 50.026 99C22.9492 99 1 77.0615 1 50C1 22.9385 22.9492 1 50.026 1C77.1029 1 99.0521 22.9385 99.0521 50Z"
-          stroke="white" stroke-width="2" />
+          stroke="white" stroke-width="2" fill="transparent" />
         <path
           d="M70.7434 50.7071C71.134 50.3166 71.134 49.6834 70.7434 49.2929L64.3795 42.9289C63.989 42.5384 63.3558 42.5384 62.9653 42.9289C62.5747 43.3195 62.5747 43.9526 62.9653 44.3431L68.6221 50L62.9653 55.6569C62.5747 56.0474 62.5747 56.6805 62.9653 57.0711C63.3558 57.4616 63.989 57.4616 64.3795 57.0711L70.7434 50.7071ZM30.0155 51H70.0363V49H30.0155V51Z"
           fill="white" />
@@ -63,7 +63,7 @@
     </ul>
 
   </header>
-
+  <!-- * service  -->
   <section class="service">
     <div class="container">
       <h2 class="title service__title">УСЛУГИ</h2>
@@ -102,6 +102,52 @@
       </div>
     </div>
   </section>
+
+  <!--W info-->
+  <section class="info">
+    <div class="container">
+      <h2 class="title">ЗЕЛЕНЫЙ ТАРИФ</h2>
+      <div class="info__inner">
+        <div class="info__box">
+          <div>
+            slider
+          </div>
+          <ul class="info__list">
+            <li class="info__list-item">
+              <h4 class="info__list-title">Гарантия выкупа
+              </h4>
+              <p class="info__list-text">Гарантированный выкуп электроэнергии государством - прописано в НКРЕ №447</p>
+            </li>
+            <li class="info__list-item">
+              <h4 class="info__list-title">Долгосрочно
+              </h4>
+              <p class="info__list-text">это проект, поддерживаемый международными инвестиционными организациями</p>
+            </li>
+            <li class="info__list-item">
+              <h4 class="info__list-title">Вид вложения
+              </h4>
+              <p class="info__list-text">Альтернатива банковским депозитам, окупаемость - от 16% до 18% годовых</p>
+            </li>
+            <li class="info__list-item">
+              <h4 class="info__list-title">Высокая ставка</h4>
+              <p class="info__list-text">Самая высокая тарифная ставка в европе - 0,16 евро</p>
+            </li>
+          </ul>
+        </div>
+
+        <div class="info__container">
+          <p class="info__container-text">
+            «Зеленый тариф» — это особые тарифные условия, которые позволяют частным домохозяйствам не только потреблять, но и продавать выработанное домашними
+            солнечными
+            электростанциями электричество в электросеть общего пользования.
+          </p>
+          <img class="info__container-img" src="images/info.jpg" alt="">
+        </div>
+      </div>
+    </div>
+  </section>
+
+
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="js/slick.min.js"></script>
